[package]
name = "parkat-anchor"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "parkat_anchor"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]


[dependencies]
anchor-lang = "0.31.1"

[dev-dependencies]
mollusk-svm = "0.6.1"
mollusk-svm-programs-memo = "0.6.1"
mollusk-svm-programs-token = "0.6.1"
solana-account = "3.0.0"
solana-feature-set = "2.2.5"
solana-precompiles = "2.2.2"
solana-program = "3.0.0"
solana-pubkey = "3.0.0"
solana-sdk = "3.0.0"
five8_const = "1.0.0"
